# RainfallAudio

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix  imgui.ini
.devcontainer/: Dockerfile  InstallDeps.sh  VulkanSDK.sh  devcontainer.json
API/: CMakeLists.txt
API/src/: RainfallAPI.cpp  RainfallAPI.hpp
API/src/Compiler/: Blackboard.hpp  Compiler.hpp  EGTest.cpp  EGTest.hpp  ExecutionGraph-LLVM.cpp  ExecutionGraph.cpp  ExecutionGraph.hpp  RainfallCompiler.hpp
API/src/Compiler/Instruction/: Defines.hpp  Instruction.hpp  Variable.hpp
API/src/Compiler/Instruction/Export/: AudioStreamExport.hpp
API/src/Compiler/Instruction/Filters/: LowPass.hpp
API/src/Compiler/Instruction/Generator/: Oscillator.cpp  Oscillator.hpp
API/src/Compiler/Instruction/Generators/: Oscillator.hpp
API/src/Compiler/Instruction/Values/: AudioStream.hpp  Scalar.hpp  Value.hpp
API/src/Instruction/: Instruction.hpp  Value.hpp
API/src/Instruction/Generator/: Oscillator.hpp
API/src/Instruction/Values/: AudioStream.hpp  Scalar.hpp  Value.hpp  Vector.hpp
API/src/Variable/: Reference.hpp  Variable.hpp
App/: CMakeLists.txt
App/src/: AppWindow.hpp  Entry.cpp  GL.hpp  RainfallEditor.cpp  RainfallEditor.hpp
App/src/GUI/: GUI.cpp  GUI.hpp
App/src/Node/: Node.cpp  Node.hpp  NodeEditor.cpp  NodeEditor.hpp  NodeRegistry.hpp  RegisterNode.hpp
App/src/Node/Simple/: SineWaveNode.cpp  SineWaveNode.hpp
App/src/NodeFlow/: Connection.cpp  Connection.hpp  IDs.hpp  Node.cpp  Node.hpp  NodeFlow.cpp  NodeFlow.hpp  NodeFlowEditor.hpp  NodeFlowView.cpp  NodeFlowView.hpp  NodeRegistry.hpp  NodeWidget.hpp  Port.cpp  Port.hpp
App/src/NodeFlow/Audio/: AudioNode.hpp
App/src/NodeFlow/Audio/Filter/: LowPassNode.cpp  LowPassNode.hpp
App/src/NodeFlow/Audio/Generator/: OscillatorNode.cpp  OscillatorNode.hpp  WaveGeneratorNode.cpp  WaveGeneratorNode.hpp
App/src/NodeFlow/Audio/Output/: OutputNode.cpp  OutputNode.hpp
App/src/NodeFlow/DataTypes/: AudioStream.hpp
Editor/: CMakeLists.txt
Editor/src/: Entry.cpp
cmake/: Boost.cmake  ImGui.cmake  LLVM.cmake  PortAudio.cmake  QT.cmake  TaskFlow.cmake
exc/: Node.cpp  Node.hpp  NodeEditor.cpp-exc  NodeEditor.hpp-exc  NodeFlow.cpp  NodeFlow.hpp  NodeFlowObject.cpp  NodeFlowObject.hpp  NodePin.cpp  NodePin.hpp  OldNode.cpp-exc  OldNode.hpp-exc
